--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
                     android:textColorHint="@color/black" />
 
                 <ImageView
+                    android:id="@+id/img_search_city"
                     android:layout_width="35dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/baseline_search_24" />
@@ -67,9 +68,13 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_data"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
